# allianceauth-wiki-js

./: .coveragerc  .editorconfig  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  runtests.py  setup.py  tox.ini
.github/workflows/: main.yml
.tx/: transifex.yml
tests/: celery.py  test_settings.py  test_settingsAA3.py  test_settingsAA4.py  urls.py  views.py
wikijs/: __init__.py  admin.py  app_settings.py  auth_hooks.py  manager.py  models.py  queries.py  tasks.py  test.py  urls.py  views.py
wikijs/cogs/: wikijs.py
wikijs/locale/de/LC_MESSAGES/: django.po
wikijs/locale/en/LC_MESSAGES/: django.po
wikijs/migrations/: 0001_initial.py  0002_auto_20200615_0932.py
wikijs/templates/wikijs/: services_ctrl.html
